--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ hcb_user = {
     website_label:'website (optional)',
     email_label:'email',
     anonymous:'名無しさん',
-    mod_label:'(管理人)',
+    mod_label:'＠管理人',
     subscribe:'email me replies',
     are_you_sure:'Do you want to flag this comment as inappropriate?',
  
