--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="icon" type="image/png" href="https://pics.prcm.jp/8c09830f44447/70074920/png/70074920.png">
+    <link rel="icon" type="image/png" href="https://www.htmlcommentbox.com/storage/lg_15849647_canvas-13.png">
     <title>
       Sちゃんねる    
     </title>
